- Remove Book function-constructor - Add getting values from form - Add display book functions

--- a/style.css
+++ b/style.css
@@ -41,8 +41,9 @@ button.close-sidebar {
     gap: 16px;
 }
 
-.checkbox-row {
+.row {
     display: flex;
+    flex-direction: column;
     gap: 8px;
 }
 
